updating neuromorphic article & scaling draft

--- a/_posts/2021-11-04-VSA-intro.md
+++ b/_posts/2021-11-04-VSA-intro.md
@@ -24,7 +24,7 @@ While this inefficiency might not be a problem for well-defined applications wit
 
 AI faces another challenge: historically, its progress has been [linked to an increasing number of model parameters](https://dl.acm.org/doi/pdf/10.1145/3381831), where each parameter is essentially a 'dial' which needs to be turned to the correct position for the model to produce the right answer. Networks which revolutionized image classification in 2013 used [millions of parameters](https://towardsdatascience.com/understanding-alexnet-a-detailed-walkthrough-20cd68a490aa); in 2021, networks focused on advancing 'natural language processing' (NLP) tasks such as translation use [billions](https://developer.nvidia.com/blog/openai-presents-gpt-3-a-175-billion-parameters-language-model/) or even [trillions](https://arxiv.org/pdf/2101.03961.pdf) of parameters. 
 
-Needing to tune this many parameters places designing and training these models outside the abilities of any but the largest corporations and governments with sufficient resources. Furthermore, the slowdown in transistor scaling which provided faster and cheaper computers for decades makes it likely that these models will remain a challenge to train and deploy without [specialized hardware](https://ieeexplore.ieee.org/abstract/document/9286149?casa_token=bqJFvwVowKYAAAAA:GvfAWMVDwY1NsdbfyqjzZ7PmYuCx-2AlJ6QWaruu19VOpNKhPt4iInWDXZ8pR3EUrQeDViRV). 
+Needing to tune this many parameters places designing and training these models outside the abilities of any but the largest corporations and governments with sufficient resources. Furthermore, the slowdown in transistor scaling which provided faster and cheaper computers for decades makes it likely that these models will remain a challenge to train and deploy even with [specialized hardware](https://ieeexplore.ieee.org/abstract/document/9286149?casa_token=bqJFvwVowKYAAAAA:GvfAWMVDwY1NsdbfyqjzZ7PmYuCx-2AlJ6QWaruu19VOpNKhPt4iInWDXZ8pR3EUrQeDViRV). 
 
 Besides these, other problems exist with modern AI such as [bias](https://hbr.org/2019/10/what-do-we-do-about-the-biases-in-ai), [lack of robustness](https://towardsdatascience.com/breaking-neural-networks-with-adversarial-attacks-f4290a9a45aa), and [lack of explainability](https://en.wikipedia.org/wiki/Explainable_artificial_intelligence). To realize the full potential of AI as reliable, autonomous systems which can improve human quality-of-life in areas such as medicine, manual labor, and household assistance, these issues must be addressed. 
 
@@ -38,21 +38,24 @@ Having very few active elements is desirable in computation, as this reduces the
 
 [Sparse matrices](https://en.wikipedia.org/wiki/Sparse_matrix) are a common example of sparse computation. In sparse matrices, only a small proportion of a large, 2-D grid of numbers have values which are not zero. As a result, to save space in computer memory these sparse matrices are often stored in compressed form as lists or dictionaries, rather than as the full matrix of their original form. 
 
-Sparsity is also encountered within biological systems. The brain is one example of a highly sparse system: at any given moment in time, it is estimated that [only 1%](https://aiimpacts.org/rate-of-neuron-firing/) of neurons in a human brain are in an 'active' state, in which they are sending out a voltage pulse or 'spike.' Given that each neuron has, on average, 10,000 synaptic inputs, this represents a highly sparse form of computation. 
+Sparsity is also encountered within biological systems. The brain is one example of a highly sparse system: at any given moment in time, it is estimated that [only 1%](https://aiimpacts.org/rate-of-neuron-firing/) of neurons in a human brain are in an 'active' state, in which they are sending out a voltage pulse or 'spike.' Given that on average, each neuron has [thousands of inputs](https://aiimpacts.org/scale-of-the-human-brain/), biological computation is highly sparse. 
 
 One example of sparsity applied to create a neuromorphic system is event-based vision. These systems date back to the origin of the field when it was first [formally defined in the 80s by Carver Mead](https://ieeexplore.ieee.org/abstract/document/58356?casa_token=4dZiSoZykVYAAAAA:zhUavTNjZhXWQcPMe0aEFROYnAglDyfeTzNPKDiK1UN5JWPLqtudZj4USor5liiBXVCSEJaD). Traditional visual representations of the world around us often consist of static images taken many times per second: the analog version of this is traditional film, where a reel holds thousands of images which are shown quickly in succession to create the illusion of movement. Digital systems are similar, but instead of a physical reel of film, a matrix of color intensities stores a virtual copy of each image at each instant in time. This creates a 3-D structure representing video. However, much of the information in this 3-D structure is often redundant; many aspects of a scene change little throughout time. Video compression algorithms often focus on capturing only the differences between each frame of video. 
 
 [Event-based vision](https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9138762) takes a different view of visual representation inspired by the retina. These image sensors do not produce a continuous series of two-dimensional images; instead, each pixel produces an 'event' when it detects the intensity of light falling on it has changed above a certain threshold. As a result, the sensor can provide very quick 'reactions' to changes in a scene; instead of waiting for the entire image frame to be read out, the detected changes are sent out immediately. This allows event-based sensors to capture [very quick changes](https://www.youtube.com/watch?v=eomALySSGVU) efficiently. Another advantage these systems provide is the ability to capture very high dynamic ranges (environments which have both very bright and dark sections). These clear advantages have motivated a number of commercial ventures into event-based vision, from both start-ups such as [Prophesee](https://www.youtube.com/watch?v=MjX3z-6n3iA) and established companies such as [Samsung](https://www.youtube.com/watch?v=6xOmo7Ikwzk). However, the unfamiliar format of these sensors' visual data and relative lack of powerful software tools for them (e.g. Adobe Premiere for event-based data) may be a hurdle to more widespread adoption of these sensors, even as their cost decreases. 
 
-Other sparse approaches to sensory encoding and data representation exist within neuromorphic computing, including [olfactory](https://www.nature.com/articles/s42256-020-0159-4) and [cochlear](https://www.sciencedirect.com/science/article/pii/S0959438810000450?casa_token=Hl9E52r-UBAAAAAA:ZHTQNd97sGzLgN07J6OaF9t7F3NNDKAZW3was9eAEHTiZkLvx97lgy8wvSnL698uo2ybewc) sensors (smell and sound). Sparsity also provides a guiding principle for the design of neurmorphic algorithms, including [pattern recall, coding, and graph search](https://ieeexplore.ieee.org/document/9395703).
+Other sparse approaches to sensory encoding and data representation, including senses such as [smell](https://www.nature.com/articles/s42256-020-0159-4), [hearing](https://www.sciencedirect.com/science/article/pii/S0959438810000450?casa_token=Hl9E52r-UBAAAAAA:ZHTQNd97sGzLgN07J6OaF9t7F3NNDKAZW3was9eAEHTiZkLvx97lgy8wvSnL698uo2ybewc), and [touch](https://www.regenhealthsolutions.info/wp-content/uploads/2019/07/A-neuro-inspired-artificial-peripheral-nervous-system-for.pdf). Sparsity also provides a guiding principle for the design of neurmorphic algorithms, including [pattern recall, coding, and graph search](https://ieeexplore.ieee.org/document/9395703).
 
 # Distribution
 
-Compared to a computer chip, the human brain is remarkably resilient. Individual sections of the brain can be damaged or removed, but after a recovery period overall activity recovers and a patient can often return to a more normal lifestyle. In contrast, computers are fragile; making a small, random cut across a processor would almost certainly result in it failing completely. 
+Compared to a computer chip, the human brain is remarkably resilient. Individual sections of the brain can be [damaged or removed](https://en.wikipedia.org/wiki/Epilepsy_surgery), but after a recovery period overall activity recovers and a patient can often return to a more normal lifestyle. In contrast, computers are fragile; making a small, random cut across a processor would almost certainly result in it failing completely. 
 
-If you have a task which is very important to complete, you can take an alternate approach from executing it on one computer: instead, you can send the same task to multiple computers and examine the answers you get back. If the majority of the answers are the same, you can assume that answer is correct and use it. This way, even if individual parts of the system fail, the overall process can overcome those failures. This is a very simple method for what's known as 'distributed computing,' but the principles remain the same: using networks of components that pass messages, creating an overall system which can correctly carry out its task even when individual components fail.
+If you have a task which is very important to complete, you can take an alternate approach from executing it on one computer: instead, you can send the same task to multiple computers and examine the answers you get back. If the majority of the answers are the same, you can assume that answer is correct and use it. This way, even if individual parts of the system fail, the overall process can overcome those failures. This is a very simple method for what's known as 'distributed computing,' but the principles remain the same: using networks of components that pass messages, creating an overall system which can correctly carry out its task even when individual components fail. It's hypothesized that in many ways, the processing the brain carries out is distributed. Certain components (neurons and synapses) can fail, but the overall computation remains the same. 
 
-It's hypothesized that in many ways, the processing the brain carries out is distributed. Certain components (neurons and synapses) can fail, but the overall computation remains the same. 
+Neuromorphic approaches often include a distributed approach to computing, both physically and conceptually. Redundant hardware 
+
+An algorithm can distribute the same information multiple places, providing some protection against it becoming corrupted. 
+
 
 # Novel Hardware
 
