--- a/_drafts/2021-11-05-scaling.md
+++ b/_drafts/2021-11-05-scaling.md
@@ -5,3 +5,11 @@ categories: computing research
 ---
 
 If you have a modest interest in technology and how it's changed over the past half-century, chances are you've heard of "Moore's Law." 
+
+history of scaling
+dennard scaling
+dark silicon
+EUV
+economics!
+
+quantum, photonic, neuromorphic, analog
