adding vsa draft

--- a/_drafts/2021-11-05-scaling.md
+++ b/_drafts/2021-11-05-scaling.md
@@ -4,7 +4,13 @@ title: Moore's Law, 56 Years On
 categories: computing research
 ---
 
-If you have a modest interest in technology and how it's changed over the past half-century, chances are you've heard of "Moore's Law." 
+If you have a modest interest in technology and how it's changed over the past half-century, chances are you've heard of "Moore's Law." The specific meaning of this term has changed over the years, but roughly refers to how the physical dimensions of transistors used for digital logic shrank exponentially from the 1960s to 2010s. Transistors changed from discrete components, something you could pick up and hold in your hand, to liliputian structures only a few hundred atoms wide.
+
+The decrease in the size of transistors allows for more complex circuits to be built in the same area, allowing computers to grow: transitioning from 8-bit systems to 64 and 128-bit systems, increasing the size of main memory from kilobytes to gigabytes, and much more. However, the benefits of transistor scaling are not infinitely gracious; as transistors grow exponentially smaller, the cost of shrinking them even further goes exponentially up. In this article, we'll look at the mechanisms which motivate scaling and how they're encountering fundamental limits, both physically and economically. 
+
+<!--more-->
+
+The first transistor created at Bell labs 
 
 history of scaling
 dennard scaling
